--- a/swiper特效.html
+++ b/swiper特效.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- 宽度为640 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Swiper的使用</title>
