大体功能实现

--- a/swiper特效.html
+++ b/swiper特效.html
@@ -75,26 +75,151 @@
                     <span class="people">
                         <img src="./images/boy.gif" alt="">
                     </span>
-
-
+                <span class="star ani" swiper-animate-effect="flash" swiper-animate-duration="1.4s" swiper-animate-delay="2.4s" swiper-animate-count="infinite">
+                            <img src="./images/starsLeft.png" alt="">
+                    </span>
+                <span class="light ani" swiper-animate-effect="flash" swiper-animate-duration="1.4s" swiper-animate-delay="2.4s">
+                        <img src="./images/lightsRight.png" alt="">
+                    </span>
                 </span>
 
                 <!-- 任性做自己 -->
                 <span class="self ani" swiper-animate-effect="bounceInRight" swiper-animate-duration=".8s" swiper-animate-delay="2.0s">
                     <img src="./images/selerTxtRight.png" alt="">
+                
+                </span>
+                <!-- 成就人脉为主 -->
+                <span class="renmai ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration=".3s" swiper-animate-delay="2.8s">
+                    <img src="./images/selerTxtLeft01.png" alt="">
+                </span>
+
+                <!--极致客情 -->
+                <span class="jizhi ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration=".3s" swiper-animate-delay="3.1s">
+                        <img src="./images/selerTxtLeft02.png" alt="">
+                </span>
+                <!-- 拼命三郎 -->
+                <span class="sanlang ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration=".3s" swiper-animate-delay="3.4s">
+                        <img src="./images/selerTxtLeft03.png" alt="">
+                </span>
+                <!-- 体力无限 -->
+                <span class="tili ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration=".3s" swiper-animate-delay="3.7s">
+                        <img src="./images/selerTxtLeft04.png" alt="">
                 </span>
             </div>
             <div class="swiper-slide slide-3">
+                <span class="up ani" swiper-animate-effect="float" swiper-animate-duration="2s">
+                            <img src="./images/arrow-up.png" alt="">
+                </span>
+                <!-- 我 -->
+                <span class="me ani" swiper-animate-effect="zoomIn" swiper-animate-duration=".8s">
+                    <img src="./images/selerTxtRightMe.png" alt="">
+                </span>
+                <!-- 市场猫 -->
+                <span class="cat ani" swiper-animate-effect="zoomIn" swiper-animate-duration=".8s" swiper-animate-delay=".8s">
+                    <img src="./images/marketTxtLeftTitle.png" alt="">
+                </span>
+                <!-- 人物出场 -->
+                <span class="peopleBox ani" swiper-animate-effect="bounceInDown" swiper-animate-duration=".8s" swiper-animate-delay="1.6s">
+                   <span class="people">
+                        <img src="./images/girl.gif" alt="">
+                   </span>
+                <span class="star"></span>
+                <span class="light"></span>
+                </span>
+                <!-- 掌控全局做自己 -->
+                <span class="self ani" swiper-animate-effect="bounceInRight" swiper-animate-duration=".8s" swiper-animate-delay="2.4s">
 
+                    <img src="./images/marketTxtLeft.png" alt="">
+                </span>
+
+                <!-- 知情达理 -->
+                <span class="dali ani" swiper-animate-effect="bounceInRight" swiper-animate-duration=".4s" swiper-animate-delay="2.7s">
+                    <img src="./images/marketTxtRight04.png" alt="">
+                </span>
+                <!-- 窈窕素女 -->
+                <span class="sunv ani" swiper-animate-effect="bounceInRight" swiper-animate-duration=".4s" swiper-animate-delay="3.0s">
+                        <img src="./images/marketTxtRight03.png" alt="">
+                </span>
+                <!-- 细腻敏锐 -->
+                <span class="mingrui ani" swiper-animate-effect="bounceInRight" swiper-animate-duration=".4s" swiper-animate-delay="3.3s">
+                        <img src="./images/marketTxtRight02.png" alt="">
+                </span>
+                <!-- 成就创业无限 -->
+                <span class="wuxiang ani" swiper-animate-effect="bounceInRight" swiper-animate-duration=".4s" swiper-animate-delay="3.6s">
+                        <img src="./images/marketTxtRight01.png" alt="">
+                </span>
             </div>
             <div class="swiper-slide slide-4">
+                <span class="up ani" swiper-animate-effect="float" swiper-animate-duration="2s">
+                            <img src="./images/arrow-up.png" alt="">
+                </span>
+                <span class="dog ani" swiper-animate-effect="bounceIn" swiper-animate-duration=".6s">
+                   <img src="./images/dogFix.gif" alt="">
+               </span>
+                <span class="cat ani" swiper-animate-effect="bounceIn" swiper-animate-duration=".6s" swiper-animate-delay=".6s">
+                   <img src="./images/catFix.gif" alt="">
+               </span>
+                <span class="sel-dog ani" swiper-animate-effect="fadeIn" swiper-animate-duration=".6s" swiper-animate-delay="1.2s">
+                   <img src="./images/FixDogTxt.png" alt="">
+               </span>
+                <span class="sel-cat ani" swiper-animate-effect="fadeIn" swiper-animate-duration=".6s" swiper-animate-delay="1.8s">
+                    <img src="./images/FixCatTxt.png" alt="">
+                </span>
+                <!-- 销售大师 -->
+                <span class="xiao ani" swiper-animate-effect="slideInLeft" swiper-animate-duration=".6s" swiper-animate-delay="2.4s">
+                    <img src="./images/FixDogBtn.png" alt="">
+                </span>
+                <!-- 市场奇才 -->
+                <span class="market ani" swiper-animate-effect="slideInRight" swiper-animate-duration=".6s" swiper-animate-delay="2.4s">
+                    <img src="./images/FixCatBtn.png" alt="">
+                </span>
+                <!-- 由你来选 -->
+                <span class="choose ani" swiper-animate-effect="fadeIn" swiper-animate-duration=".6s" swiper-animate-delay="3s">
+                    <img src="./images/FixArrowTxt.png" alt="">
+                    <span class="you">
+                        <img class="ani"  src="./images/FixArrowTxtYou.png" alt="">
+                    </span>
+                </span>
+            </div>
+            <div class="swiper-slide slide-5">
+                <span class="up ani" swiper-animate-effect="float" swiper-animate-duration="2s">
+                                <img src="./images/arrow-up.png" alt="">
+                </span>
+                <!-- 超越平凡 -->
+                <span class="title">
+                    <img src="./images/titlesAcoreSummer.png" alt="">
+                </span>
+
+                <span class="node"><img src="./images/titlesDots.png" alt=""></span>
 
             </div>
-        </div>
-        <!-- 如果需要分页器 -->
-        <div class="swiper-pagination"></div>
-    </div>
+            <div class="swiper-slide slide-6">
+                <span class="up ani" swiper-animate-effect="float" swiper-animate-duration="2s">
+                                    <img src="./images/arrow-up.png" alt="">
+                    </span>
 
+                <span class="logo ani" swiper-animate-effect="fadeIn" swiper-animate-duration="2s">
+                            <img src="./images/logo_gray.png" alt="">
+                </span>
+                <span class="title">
+                    <img src="./images/endTxt2015.jpg" alt="">
+                </span>
+                <span class="search">
+                   <div class="word">
+                        <img src="./images/searchTxt.png" alt="">
+                   </div>
+                </span>
+                <span class="bottom-btn">
+                    <img class="btn1" src="./images/btnFollowNestle.png" alt="">
+                    <img class="btn2" src="./images/endBtnGuide.png" alt="">
+                    <img class="btn3" src="./images/btnJoin.png" alt="">
+                </span>
+
+            </div>
+            <!-- 如果需要分页器 -->
+            <div class="swiper-pagination"></div>
+        </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.js"></script>
     <script src="./js/swiper.animate1.0.2.min.js"></script>
     <script>
@@ -112,7 +237,16 @@
                 swiperAnimate(swiper); //每个slide切换结束时也运行当前slide动画
             }
         });
+
+        function remScale() {
+            var width = document.documentElement.clientWidth || window.innerWidth || document.documentElement.getBoundingClientRect().width;
+            document.documentElement.style.fontSize = (100 * width / 640) + 'px';
+
+        }
+        remScale();
+        window.onresize = remScale();
     </script>
+
 </body>
 
 </html>
